--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/wallet.png" />
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cost Manager App</title>
 </head>
